# src/user/dto/update-user.dto.ts
@@ -1,4 +1,6 @@
 import { PartialType } from '@nestjs/mapped-types';
-import { CreateUserDto } from 'src/user/dto/create-user.dto';
+import { CreateUserDto, CreateUserResponseDto } from 'src/user/dto/create-user.dto';
 
 export class UpdateUserDto extends PartialType(CreateUserDto) { }
+
+export class UpdateUserResponseDto extends PartialType(CreateUserResponseDto) { }
